<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#e3ebf9"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/mykeyboard"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:fontFamily="@font/mblack"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/create_your_first_custom_keyboard"
        android:textColor="@color/black"
        android:fontFamily="@font/medium"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:textSize="13sp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnableKeyboard"
            android:textAllCaps="false"
            app:cornerRadius="14dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/medium"
            android:text="@string/enable_keyboard"
            android:layout_width="match_parent"
            android:layout_height="55dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChooseKeyboard"
            android:textAllCaps="false"
            app:cornerRadius="14dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/medium"
            android:text="@string/choose_keyboard"
            android:layout_width="match_parent"
            android:layout_height="55dp"/>
    </LinearLayout>


</LinearLayout>